@@ -34,7 +34,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: sshd.8,v 1.100 2001/03/04 11:04:41 stevesk Exp $
+.\" $OpenBSD: sshd.8,v 1.101 2001/03/04 11:16:06 stevesk Exp $
 .Dd September 25, 1999
 .Dt SSHD 8
 .Os
@@ -612,9 +612,6 @@ and
 Multiple versions must be comma-separated.
 The default is
 .Dq 1 .
-.It Cm RandomSeed
-Obsolete.
-Random number generation uses other techniques.
 .It Cm ReverseMappingCheck
 Specifies whether
 .Nm
