@@ -153,6 +153,9 @@
    - stevesk@cvs.openbsd.org 2001/03/04 11:04:41
      [sshd.8]
      small cleanup and clarify for PermitRootLogin; ok markus@
+   - stevesk@cvs.openbsd.org 2001/03/04 11:16:06
+     [servconf.c sshd.8]
+     kill obsolete RandomSeed; ok markus@ deraadt@
 
 20010304
  - (bal) Remove make-ssh-known-hosts.1 since it's no longer valid.
@@ -4345,4 +4348,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.899 2001/03/05 07:40:40 mouring Exp $
+$Id: ChangeLog,v 1.900 2001/03/05 07:42:03 mouring Exp $
